--- a/CA_2 - 2023.ipynb
+++ b/CA_2 - 2023.ipynb
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "aa8f146f",
+   "id": "188f913b",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "71e7f234",
+   "id": "a172196a",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14de1ab8",
+   "id": "f03b5d01",
    "metadata": {},
    "source": [
     "Irish DS There's no null values that's great!!"
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b006cd8",
+   "id": "208c8859",
    "metadata": {},
    "source": [
     "Hong Kong DS There's a empty column will be removed in cleaning data steps"
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cde3d8f0",
+   "id": "2f801cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9df0a0d",
+   "id": "f1e9159f",
    "metadata": {},
    "source": [
     "## Sentimental analysis"
@@ -2706,7 +2706,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7f72850b",
+   "id": "ed8fb45f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2716,7 +2716,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "157ab46f",
+   "id": "cacab269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2740,7 +2740,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9274cb35",
+   "id": "aecbced7",
    "metadata": {},
    "outputs": [
     {
@@ -2772,7 +2772,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3beb6acb",
+   "id": "34098051",
    "metadata": {},
    "outputs": [
     {
@@ -2813,7 +2813,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d1a8c079",
+   "id": "4b3f971a",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b33e3e40",
+   "id": "71502cf0",
    "metadata": {},
    "source": [
     "#### Preprocessing and Feature Extraction"
@@ -2870,7 +2870,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "30fed6f0",
+   "id": "2fd6bae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2886,7 +2886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f0e5c77",
+   "id": "fe16b140",
    "metadata": {},
    "source": [
     "#### Define Target Variables"
@@ -2895,7 +2895,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6c40c3b9",
+   "id": "2dd9b8ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2906,7 +2906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b89589e",
+   "id": "1943445a",
    "metadata": {},
    "source": [
     "#### Dimensionality Reduction"
@@ -2915,7 +2915,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cd1397c1",
+   "id": "c4c62f35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2932,7 +2932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73e9dfa7",
+   "id": "04457f65",
    "metadata": {},
    "source": [
     "#### Model Training and Cross-Validation"
@@ -2941,7 +2941,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c85114ef",
+   "id": "61b2407a",
    "metadata": {},
    "outputs": [
     {
@@ -2971,7 +2971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c81c94d",
+   "id": "31653b98",
    "metadata": {},
    "source": [
     "#### Model Evaluation"
@@ -2980,7 +2980,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "67a32d63",
+   "id": "6cb99f1c",
    "metadata": {},
    "outputs": [
     {
@@ -3031,7 +3031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49c78247",
+   "id": "adc938f2",
    "metadata": {},
    "source": [
     "# Programming"
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7437c3",
+   "id": "6e4047fb",
    "metadata": {},
    "source": [
     "### Testing\n",
@@ -3050,7 +3050,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c60ca61d",
+   "id": "a67e5938",
    "metadata": {},
    "outputs": [
     {
@@ -3109,6 +3109,91 @@
     "\n",
     "# Running the test\n",
     "unittest.main(argv=[''], exit=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ec23a001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unittest.mock import patch, MagicMock\n",
+    "import unittest\n",
+    "import praw\n",
+    "import pandas as pd\n",
+    "from os import getenv\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# revw_reddit function here\n",
+    "@patch('praw.Reddit')\n",
+    "def test_revw_reddit_integration(mock_reddit):\n",
+    "    # Setup the mock to return test data\n",
+    "    mock_submission = MagicMock()\n",
+    "    mock_submission.title = 'Test Title'\n",
+    "    mock_submission.selftext = 'Test Text'\n",
+    "    mock_reddit.return_value.subreddit.return_value.search.return_value = [mock_submission]\n",
+    "\n",
+    "    # Call the function with the mock\n",
+    "    df = revw_reddit('test_subreddit', 'test_query')\n",
+    "    \n",
+    "    # Check that the DataFrame contains the correct data\n",
+    "    assert len(df) == 1, \"DataFrame contains incorrect number of rows.\"\n",
+    "    assert df.loc[0, 'title'] == 'Test Title', \"Title in DataFrame is incorrect.\"\n",
+    "    assert df.loc[0, 'text'] == 'Test Text', \"Text in DataFrame is incorrect.\"\n",
+    "    print(\"Integration test passed.\")\n",
+    "    \n",
+    "# Uncomment the line below to run the integration test for a while will be a loop to stress the API \n",
+    "#  test_revw_reddit_integration()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "382756b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integration test passed.\n",
+      "Integration test execution time: 0.005094766616821289 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Call the test function\n",
+    "test_revw_reddit_integration()\n",
+    "end_time = time.time()\n",
+    "print(f\"Integration test execution time: {end_time - start_time} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "71b1c6a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peak memory usage during the load test: 622.0625 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from memory_profiler import memory_usage\n",
+    "def wrapper_function():\n",
+    "    for _ in range(100):\n",
+    "        df = revw_reddit('test_subreddit', 'test_query')\n",
+    "\n",
+    "mem_usage = memory_usage((wrapper_function,))\n",
+    "print(f\"Peak memory usage during the load test: {max(mem_usage)} MiB\")"
    ]
   }
  ],
